v3.2b2(not released yet)
--
1. new JasperDesignManager class to handle design xml file - 2022/04/10

v3.2b1(not released yet)
--
1. poi bump to 5.0.0
2. add word package 
3. fix cell style exceeds 64000 limit 2021/10/14


v3.1p5(not release)
--

v3.1p4 - 2020/02/06
--
1. add close in GitUtil - 2019/09/08(v3.1p3)
2. add removeLocalGitRepository in GitUtil - 2019/09/13
3. add commit in GitUtil - 2019/09/14
4. method update() in GitUtil changed to pull() - 2019/09/14
5. add push() in GitUtil - 2019/09/14
6. add commit author name and email - 2019/09/15
7. add createLocalRepository method in GitUtil - 2019/09/20
8. add some methods in GitUtil - 2019/09/28
9. get all remote branch in GitUtil - 2019/09/30
10. checkout local branch in GitUtil - 2019/09/30
11. CreateXLSX performance tuning - 2020/02/06
    poi update to 3.17
    
v3.1p2 - 2019/05/28
--
1. jgit library downgrade to version 4.5 (compatible with android p)

v3.1 - 2019/03/04
--
1. Update itext7 library to 7.0.4 - 2017/07/26
2. New class "EncryptPDF" that can encrypt PDF and hide PDF tool bar - 2017/12/01
3. New class AppEncryptPDF that use swing GUI(use i18n properties) - 2017/12/06
4. add xbean.jar to handle xml exception (create excel) - 2018/10/15
5. use InMethod 2.03 - 2018/10/15
6. add jxcel(excel to pdf) note: jxcel is not free - 2019/02/22 (removed in 2019/02/23)
7. itext7 upgrade from 7.0.4 to 7.1.5 - 2019/02/22
8. add AutoSizeColumn in CreateXLSX class - 2019/02/22
9. add jasper report component

v3.0 - 2017/07/07 
--
1.  use apache poi 3.15 - 2016/10/18
2.  fix bug "wrong row ,col parameter" in CreateXLS.createHeader - 2016/10/20
3.  add ddclient (google domains dynamic client) - 2016/11/07
4.  new class CreateXLSX that can create xlsx excel file - 201/11/16
5.  new class ReadXLSX that can read xlsx excel file - 2016/11/17
6.  add ddclientProxyServlet , refactoring ddclient - 2016/12/14
7.  add version control utility - 2017/01/06
    package inmethod.jakrata.vcs